--- a/gui/main.ui
+++ b/gui/main.ui
@@ -11,29 +11,44 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Departamento Pilin</string>
+   <string>main</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>20</x>
       <y>10</y>
-      <width>431</width>
-      <height>511</height>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Admin</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>201</width>
+      <height>241</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>../../../../../../Desktop/joker.jpeg</pixmap>
+     <pixmap>../img/dog-a.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
