--- a/gui/registro.ui
+++ b/gui/registro.ui
@@ -220,7 +220,7 @@
    </item>
    <item>
     <property name="text">
-     <string>Donacionaes</string>
+     <string>Donaciones</string>
     </property>
    </item>
   </widget>
@@ -246,7 +246,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>220</y>
+     <y>230</y>
      <width>211</width>
      <height>20</height>
     </rect>
@@ -264,7 +264,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>240</y>
+     <y>260</y>
      <width>81</width>
      <height>20</height>
     </rect>
