--- a/gui/deposito.ui
+++ b/gui/deposito.ui
@@ -472,16 +472,6 @@ border-radius: 8px;</string>
      <string>Hombre</string>
     </property>
    </item>
-   <item>
-    <property name="text">
-     <string>Otro</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Todos los Días</string>
-    </property>
-   </item>
   </widget>
   <widget class="QDateEdit" name="txtFecha">
    <property name="geometry">
@@ -500,14 +490,24 @@ border-radius: 8px;</string>
    <property name="readOnly">
     <bool>false</bool>
    </property>
+   <property name="dateTime">
+    <datetime>
+     <hour>0</hour>
+     <minute>0</minute>
+     <second>0</second>
+     <year>2001</year>
+     <month>1</month>
+     <day>2</day>
+    </datetime>
+   </property>
    <property name="calendarPopup">
     <bool>true</bool>
    </property>
    <property name="date">
     <date>
      <year>2001</year>
-     <month>9</month>
-     <day>11</day>
+     <month>1</month>
+     <day>2</day>
     </date>
    </property>
   </widget>
