--- a/gui/finanzas.ui
+++ b/gui/finanzas.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Banco - Transferencias</string>
+   <string>Finanzas</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 255, 255);</string>
@@ -158,7 +158,7 @@
 color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
-     <string>Selecciones un área</string>
+     <string>Selecciones una área</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
