--- a/gui/admin2.ui
+++ b/gui/admin2.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
+    <width>550</width>
     <height>400</height>
    </rect>
   </property>
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>530</width>
-    <height>16777215</height>
+    <width>550</width>
+    <height>400</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -42,11 +42,11 @@
             background-color: #27ae60; /* Color al pasar el cursor */
         }</string>
    </property>
-   <widget class="QPushButton" name="btnRegistrar_Transferencias_2">
+   <widget class="QPushButton" name="btnAtencion">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>130</y>
+      <y>140</y>
       <width>221</width>
       <height>41</height>
      </rect>
@@ -58,14 +58,14 @@
      </font>
     </property>
     <property name="text">
-     <string>Registro de transferencias</string>
+     <string>Atención al Cliente</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnReportar_Tranferencia_2">
+   <widget class="QPushButton" name="btnFinanzas">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>130</y>
+      <x>310</x>
+      <y>140</y>
       <width>211</width>
       <height>41</height>
      </rect>
@@ -77,14 +77,14 @@
      </font>
     </property>
     <property name="text">
-     <string>Reporte de Transferencia</string>
+     <string>Finanzas</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnHistorial_Transferencias_2">
+   <widget class="QPushButton" name="btnEmpleado">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>210</y>
+      <x>20</x>
+      <y>220</y>
       <width>221</width>
       <height>41</height>
      </rect>
@@ -96,7 +96,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Historial de Transferencias</string>
+     <string>Empleado</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -104,7 +104,7 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>531</width>
+      <width>551</width>
       <height>351</height>
      </rect>
     </property>
@@ -119,8 +119,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
-      <width>171</width>
+      <y>10</y>
+      <width>191</width>
       <height>41</height>
      </rect>
     </property>
@@ -142,8 +142,8 @@
      <rect>
       <x>20</x>
       <y>70</y>
-      <width>161</width>
-      <height>16</height>
+      <width>241</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -158,22 +158,28 @@
 color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
-     <string>Seleccionar un área</string>
+     <string>Seleccionar un Departamento</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>0</y>
+      <x>230</x>
+      <y>20</y>
       <width>311</width>
       <height>41</height>
      </rect>
     </property>
+    <property name="maximumSize">
+     <size>
+      <width>670</width>
+      <height>16777215</height>
+     </size>
+    </property>
     <property name="font">
      <font>
       <family>Monotype Koufi</family>
-      <pointsize>18</pointsize>
+      <pointsize>14</pointsize>
       <bold>true</bold>
      </font>
     </property>
@@ -181,15 +187,15 @@ color: rgb(0, 0, 0);</string>
      <string notr="true">color: rgb(0, 170, 0);</string>
     </property>
     <property name="text">
-     <string>Departamento de Finanzas</string>
+     <string>Administación de Departamentos</string>
     </property>
    </widget>
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
       <x>-30</x>
-      <y>90</y>
-      <width>561</width>
+      <y>100</y>
+      <width>591</width>
       <height>6</height>
      </rect>
     </property>
@@ -215,7 +221,7 @@ background-color: rgb(238, 238, 238);</string>
      <rect>
       <x>0</x>
       <y>310</y>
-      <width>531</width>
+      <width>571</width>
       <height>131</height>
      </rect>
     </property>
@@ -229,8 +235,8 @@ background-color: rgb(238, 238, 238);</string>
    <widget class="QPushButton" name="btnSalir">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>320</y>
+      <x>450</x>
+      <y>330</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -261,42 +267,36 @@ font: 77 10pt&quot;Arial Black&quot;;
      <string>Salir</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnGestion">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>220</y>
+      <width>211</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe MDL2 Assets</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Gestión de Tarjetas</string>
+    </property>
+   </widget>
    <zorder>label</zorder>
-   <zorder>btnRegistrar_Transferencias_2</zorder>
-   <zorder>btnReportar_Tranferencia_2</zorder>
-   <zorder>btnHistorial_Transferencias_2</zorder>
+   <zorder>btnAtencion</zorder>
+   <zorder>btnFinanzas</zorder>
+   <zorder>btnEmpleado</zorder>
    <zorder>label_15</zorder>
    <zorder>label_14</zorder>
    <zorder>label_2</zorder>
    <zorder>frame</zorder>
    <zorder>label_3</zorder>
    <zorder>btnSalir</zorder>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>530</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuArchivo">
-    <property name="title">
-     <string>Archivo</string>
-    </property>
-    <addaction name="btnRegistrar_Transferencias"/>
-    <addaction name="btnReportar_Tranferencia"/>
-    <addaction name="btnHistorial_Transferencias"/>
-   </widget>
-   <widget class="QMenu" name="menuCreditos">
-    <property name="title">
-     <string>Créditos</string>
-    </property>
-    <addaction name="actionDesarrolladores"/>
-   </widget>
-   <addaction name="menuArchivo"/>
-   <addaction name="menuCreditos"/>
+   <zorder>btnGestion</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionDesarrolladores">
