--- a/gui/deposito.ui
+++ b/gui/deposito.ui
@@ -257,7 +257,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Cliente acepta los términicos y condiciones *</string>
+    <string>Cliente acepta los términos y condiciones *</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btnRegistrar">
@@ -492,7 +492,7 @@ border-radius: 8px;</string>
    </property>
    <property name="dateTime">
     <datetime>
-     <hour>0</hour>
+     <hour>6</hour>
      <minute>0</minute>
      <second>0</second>
      <year>2001</year>
